--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@slicemachine/adapter-next": "^0.3.23",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
@@ -31,6 +31,6 @@
     "postcss": "^8",
     "slice-machine-ui": "^1.19.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.2.2"
   }
 }
